--- a/microsetta_interface/templates/survey.jinja2
+++ b/microsetta_interface/templates/survey.jinja2
@@ -300,7 +300,7 @@
             },
             {
                 buttonText: "{{ _('Save & Come Back Later') }}",
-                styleClasses: "tmi-survey-button-white tmi-survey-centered col-8",
+                styleClasses: "tmi-survey-button-white-noborder tmi-survey-centered col-8",
                 type: "submit",
                 validateBeforeSubmit: true,
                 onSubmit: function(){
